--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.8.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.8.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.kakao.sdk:v2-user:2.14.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
